--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   display: flex;
   margin: 0;
   padding: 0;
+  color: var(--tg-theme-text-color);
   background: linear-gradient(
     135deg,
     #6d78ff,
@@ -31,6 +32,7 @@ body {
 }
 
 button {
+  background-color: var(--tg-theme-button-color);
   padding: 10px 20px;
   font-size: 18px;
   cursor: pointer;
