--- a/style.css
+++ b/style.css
@@ -21,12 +21,7 @@ body {
   max-width: 800px;
   margin: auto;
   padding: 20px;
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.8
-  ); /* Semi-transparent white background for the game container */
+  background-color: var(--tg-theme-bg-color);
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); /* Shadow effect */
 }
