--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 .container {
   display: flex;
   height: 80%;
+  min-width: 300px;
   flex-direction: column;
   text-align: center;
   justify-content: center;
@@ -31,4 +32,29 @@ button {
   padding: 10px 20px;
   font-size: 18px;
   cursor: pointer;
+}
+
+.sm-list {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+.sm-list li {
+  background-color: var(--tg-theme-button-color);
+  padding: 10px 20px;
+  font-size: 36px;
+  cursor: pointer;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.main-link {
+  background-color: var(--tg-theme-button-color);
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  text-decoration: none;
+  color: var(--tg-theme-text-color);
 }
