--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
 }
 
 button {
+  border-radius: 10px;
   background-color: var(--tg-theme-button-color);
   padding: 10px 20px;
   font-size: 18px;
@@ -35,6 +36,7 @@ button {
 }
 
 .sm-list {
+  border-radius: 10px;
   padding: 0;
   list-style: none;
   display: flex;
@@ -42,6 +44,7 @@ button {
 }
 
 .sm-list li {
+  border-radius: 10px;
   background-color: var(--tg-theme-button-color);
   padding: 10px 20px;
   font-size: 36px;
